Added rest controller advice for handling errors generated from api.