@@ -2,15 +2,13 @@ package com.proxiad.hangmangame.api.statistic;
 
 import java.util.Optional;
 import javax.validation.Valid;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import com.proxiad.hangmangame.api.BadRequestException;
 import com.proxiad.hangmangame.logic.game.GameSessionService;
+import com.proxiad.hangmangame.logic.game.InvalidGameSessionException;
 import com.proxiad.hangmangame.logic.ranking.RankingService;
 import com.proxiad.hangmangame.logic.statistic.GameStatisticService;
 import com.proxiad.hangmangame.model.game.GameSession;
@@ -39,7 +37,8 @@ public class GameStatisticApi {
         gameStatService.findStatisticByGameSession(retrievedSession);
 
     if (retirevedStatistic.isPresent()) {
-      throw new BadRequestException("Game with ID [%s] already has statistic".formatted(gameId));
+      throw new InvalidGameSessionException(
+          String.format("Game with ID [%s] already has statistic", gameId));
     }
     rankingService.createRankingForPlayer(gameId, statRequest.getGamerName());
     return ResponseEntity.ok().build();
